--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "apollo-server": "^2.0.0",
     "apollo-server-express": "^2.0.0-rc.12",
+    "express": "^4.16.4",
     "graphql": "^0.13.2",
     "sequelize": "^4.38.0",
     "sequelize-cockroachdb": "^1.0.3",
